--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "szelest-ciszy",
-  "private": true,
+  "private": "false",
   "description": "A website for K.Maciakiewicz",
   "version": "0.1.0",
   "author": "Karol Badeja",
@@ -44,7 +44,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/badikar/szelest-ciszy.git"
   }
 
 }
